--- a/src/components/FormularioImc/FormularioImc.module.css
+++ b/src/components/FormularioImc/FormularioImc.module.css
@@ -31,6 +31,7 @@ form {
     width: 100%;
     text-align: center;
     border-collapse: collapse;
+    margin-bottom: 30px;
 }
 .tableTitle {
     background-color: rgb(73, 73, 73);
